use overflow:hidden to stop icons from changing container height.

--- a/src/style/icons.scss
+++ b/src/style/icons.scss
@@ -7,9 +7,11 @@
 	height: 25px;
 	display: inline-block;
 	margin: 0;
+	overflow: hidden; // avoid changing the dimensions of container when SVG is injected
 }
 
 .w-icon svg {
+	margin: 0;
   	fill: $brand-color;
 }
 
